fix: layout shift on content overflow

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,6 +1,39 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  height: 100%;
+  overflow-y: auto;
+  overflow-x: hidden;
+  padding-left: calc(100vw - 100%);
+}
+
+
+/* Customizing the scrollbar */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: var(--background);
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--muted-foreground);
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: var(--foreground);
+}
+
+/* For Firefox */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: var(--muted-foreground) var(--background);
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
